<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/calorieFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/calorie"
        android:icon="@drawable/icon_food"/>
    <item
        android:id="@+id/workoutFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/workout"
        android:icon="@drawable/icon_bike"/>
    <item
        android:id="@+id/trackingFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/tracking"
        android:icon="@drawable/icon_graph"/>
    <item
        android:id="@+id/profileFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/profile"
        android:icon="@drawable/icon_profile"/>

</menu>