<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LogInFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp"
        android:backgroundTint="@color/secondary"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginHorizontal="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                style="?android:attr/buttonBarStyle"
                android:weightSum="2"
                android:layout_marginBottom="24dp">
                <Button
                    android:id="@+id/btnSignIn"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/signIn"
                    style="?android:attr/buttonBarStyle"
                    />
                <Button
                    android:id="@+id/btnCreateAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/createAccount"
                    style="?android:attr/buttonBarStyle"/>

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:padding="4dp"/>
            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"

                android:hint="@string/exampleEmail"
                android:drawableEnd="@drawable/icon_done"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:padding="4dp"/>
            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:autofillHints="password"
                android:inputType="textPassword"

                android:hint="@string/examplePassword"
                android:drawableEnd="@drawable/icon_eye"/>



            <Button
                android:id="@+id/btnLogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logIn"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="40dp"
                android:layout_gravity="center"/>





        </LinearLayout>


    </androidx.cardview.widget.CardView>

</FrameLayout>