<?xml version="1.0" encoding="utf-8"?>


<!-- TODO: Update blank fragment layout -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".ProfileFragment"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardBMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculate_your_bmi"
                android:textStyle="bold"
                android:textSize="28sp"
                android:padding="12dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <EditText
                    android:id="@+id/edtWeightBMI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/weight"
                    android:inputType="numberDecimal"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <EditText
                    android:id="@+id/edtHeightBMI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/height"
                    android:inputType="numberDecimal"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btnSaveBMI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_margin="12dp"/>
            <Button
                android:id="@+id/btnCalculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculate"
                android:layout_margin="12dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="12dp">

                <TextView

                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_bmi_is"/>

                <TextView
                    android:id="@+id/txtBMI"
                    android:layout_marginStart="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logOut"
        app:layout_constraintTop_toBottomOf="@+id/cardBMI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>

<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--xmlns:tools="http://schemas.android.com/tools"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="match_parent"-->
<!--tools:context=".ProfileFragment">-->
<!--</FrameLayout>-->