<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey1"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/pageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="28dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textStyle="bold"
            android:textSize="22sp"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/begin"
                android:paddingTop="24dp"/>
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/begin2"
                android:paddingTop="24dp"/>

        </LinearLayout>

        <Switch
            android:id="@+id/swiFragmentSwap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:ignore="UseSwitchCompatOrMaterialXml" />



    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainerViewLogIn"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:defaultNavHost="true"

            app:layout_constraintBottom_toBottomOf="parent"
            app:navGraph="@navigation/nav_map_login" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>