<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/txtSetNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/set_1"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilWeight"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtSetNumber"
        android:layout_width="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edtWeight"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:hint="@string/weight"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilReps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/tilWeight"
        app:layout_constraintTop_toTopOf="parent">
        <EditText
            android:id="@+id/edtReps"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:hint="@string/reps_time"
            android:inputType="number"/>


    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>