<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WorkoutFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">






        <Button
            android:id="@+id/btnAddExercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_exercise"
            android:layout_margin="24dp"
            app:layout_constraintTop_toTopOf="parent"
            />



        <Button
            android:id="@+id/btnAddWorkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_workout"
            android:layout_margin="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btnAddExercise"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btnAddWorkout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            android:layout_marginHorizontal="8dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/txtWorkoutLogHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:paddingVertical="4dp"
                    android:paddingStart="4dp"
                    android:text="@string/daily_workout_log"
                    android:background="@color/secondary"
                    android:textStyle="bold"
                    android:textSize="14sp"/>

                <ImageButton
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_arrow_expand"
                    android:background="@android:color/transparent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:paddingTop="4dp"
                    android:paddingEnd="4dp"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/txtWorkoutLogHeader">

                    <TextView
                        android:id="@+id/txtNameHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/exercise_name"
                        android:layout_marginStart="4dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/muscle_group"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/no_of_sets"
                        android:layout_marginEnd="4dp"/>


                    <View
                        android:id="@+id/line"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey8"
                        app:layout_constraintTop_toBottomOf="@+id/txtNameHeader"
                        android:layout_marginHorizontal="4dp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerDailyExercises"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/line"
                        android:layout_marginHorizontal="4dp"

                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>




        </androidx.cardview.widget.CardView>



    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>